--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ Werkzeug==2.0.3
 PyMySQL==1.0.2
 cryptography==3.4.7
 Flask-CORS==3.0.10
+Flask-Migrate==2.7.0
 python-dotenv==0.19.0
 pytest==6.2.5 
