--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ cryptography==3.4.7
 Flask-CORS==3.0.10
 Flask-Migrate==2.7.0
 python-dotenv==0.19.0
-pytest==6.2.5 
+pytest==6.2.5
+gunicorn==20.1.0 
