--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ jobs:
         image: mysql:8.0
         env:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: ${{ secrets.MYSQL_TEST_DB }}
-          MYSQL_USER: ${{ secrets.MYSQL_TEST_USER }}
-          MYSQL_PASSWORD: ${{ secrets.MYSQL_TEST_PASS }}
+          MYSQL_DATABASE: personal_finance_test
+          MYSQL_USER: test_user
+          MYSQL_PASSWORD: test_password
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
