--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,23 +29,23 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-cov
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install -r requirements.txt
+    #     pip install pytest pytest-cov
 
-    - name: Run tests
-      env:
-        TEST_DATABASE_URL: mysql://test_user:test_password@localhost/personal_finance_test
-      run: |
-        pytest --cov=./ --cov-report=xml
+    # - name: Run tests
+    #   env:
+    #     TEST_DATABASE_URL: mysql://test_user:test_password@localhost/personal_finance_test
+    #   run: |
+    #     pytest --cov=./ --cov-report=xml
 
-    - name: Upload coverage reports
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.xml
-        fail_ci_if_error: true
+    # - name: Upload coverage reports
+    #   uses: codecov/codecov-action@v3
+    #   with:
+    #     file: ./coverage.xml
+    #     fail_ci_if_error: true
 
   build:
     needs: test
