--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/personal-finance-api:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/fingoose-api:latest
 
   deploy:
     needs: build
@@ -85,16 +85,16 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           # Pull latest image
-          docker pull ${{ secrets.DOCKER_USERNAME }}/personal-finance-api:latest
+          docker pull ${{ secrets.DOCKER_USERNAME }}/fingoose-api:latest
           
           # Stop existing container
-          docker stop personal-finance-api || true
-          docker rm personal-finance-api || true
+          docker stop fingoose-api || true
+          docker rm fingoose-api || true
           
           # Run new container
           docker run -d \
-            --name personal-finance-api \
+            --name fingoose-api \
             -p 5000:5000 \
             -e DATABASE_URL=${{ secrets.PROD_DATABASE_URL }} \
             -e FLASK_ENV=production \
-            ${{ secrets.DOCKER_USERNAME }}/personal-finance-api:latest 
+            ${{ secrets.DOCKER_USERNAME }}/fingoose-api:latest 
